--- a/index.html
+++ b/index.html
@@ -202,19 +202,36 @@ through a range of projects.
           -->
           <div class="project-card">
 			<a href="./project-pages/managine.html">
-				<div class="project-image-container">
+			    <div class="project-image-container">
 					<img src="./assets/images/Managine.png" class="project-image">
 				</div>
 			</a>
             <div class="project-card-text-container">
               <div class="subheader-text project-title">3D-Engine Managine</div>
               <div class="body-text project-card-text">Custom Game Engine created with OpenGL</div>
-            </div>
+			</div>
             <a class="button" href="./project-pages/managine.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+		  
+		   <div class="project-card">
+			<a href="./project-pages/pbdGases.html">
+			    <div class="project-image-container">
+					<img src="./assets/images/PBDStart.png" class="project-image">
+				</div>
+			</a>
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">PBD-Gases</div>
+              <div class="body-text project-card-text">Unity plugin for dynamic fluid and gas simulation using the Position-Based Dynamics algorithm</div>
+			</div>
+            <a class="button" href="./project-pages/managine.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
+		  
         </div>
       </div>
     </div>
