--- a/project-pages/royalRevoltTraders.html
+++ b/project-pages/royalRevoltTraders.html
@@ -13,7 +13,7 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/RundesApplicationBild.png" />
-     <title>Project Managine</title>
+     <title>Royal Revolt a Traders Tale</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -28,7 +28,7 @@
     <!-- NAVBAR -->
 <div class="navbar">
   <a class="nav-title-link" href="../index.html">
-    <span class="nav-title">Back To Portfolio</span>
+    <span class="nav-title">Portfolio</span>
   </a>
   
   <!-- Wrap these buttons inside a container -->
