fixed pictures in pbd gallery

--- a/project-pages/pbdGases.html
+++ b/project-pages/pbdGases.html
@@ -138,7 +138,7 @@
                   - IMAGE_CAPTION: to the caption of the image
             -->
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/pbdPoster.png" class="gallery-image">
+              <img src="../assets/images/PBDPoster.png" class="gallery-image">
               <span class="image-caption">Project Poster</span>
             </div>
 <pre>
@@ -165,7 +165,7 @@
 </code><span class="image-caption">PBD algorithm solver loop</span>
 </pre>
 			<div class="gallery-image-container">
-              <img src="../assets/images/pbdInit.png" class="gallery-image">
+              <img src="../assets/images/PBDInit.png" class="gallery-image">
               <span class="image-caption">Plugin Settings</span>
             </div>
         </div>
