fix read more buttons

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ through a range of projects.
               <div class="subheader-text project-title">Merge Jelly Idle Adventure</div>
               <div class="body-text project-card-text">Merge Idle Game for Android</div>
             </div>
-            <a class="button" href="./project-pages/royalRevoltTraders.html">
+            <a class="button" href="./project-pages/jellyMerge.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -226,7 +226,7 @@ through a range of projects.
               <div class="subheader-text project-title">PBD-Gases</div>
               <div class="body-text project-card-text">Unity plugin for dynamic fluid and gas simulation using the Position-Based Dynamics algorithm</div>
 			</div>
-            <a class="button" href="./project-pages/managine.html">
+            <a class="button" href="./project-pages/pbdGases.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
