added royal forest battle game and 5Days project

--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -53,7 +53,7 @@
 
 <div class="project-init">
       <div class="card-header">
-        <h3 class="card-title">Managine</h3>
+        <div class="card-title">Managine</div>
       </div>
       <div class="card-body">
  	<div class="card-item">
