--- a/project-pages/royalRevoltTraders.html
+++ b/project-pages/royalRevoltTraders.html
@@ -45,7 +45,7 @@
 	    
 		<div class="project-init">
       <div class="card-header">
-        <h3 class="card-title">Royal Revolt: A Trader's Tale</h3>
+        <div class="card-title">Royal Revolt: A Trader's Tale</div>
       </div>
       <div class="card-body">
  	<div class="card-item">
