--- a/project-pages/5Days.html
+++ b/project-pages/5Days.html
@@ -13,7 +13,7 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/RundesApplicationBild.png" />
-     <title>PBD-Gases</title>
+     <title>5Days</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -45,74 +45,54 @@
 	    
 		<div class="project-init">
       <div class="card-header">
-        <div class="card-title">Real-Time-Gases</div>
+        <div class="card-title">5Days</div>
       </div>
       <div class="card-body">
  	<div class="card-item">
-          <strong>Gas simulation plugin for Unity based on the position-based dynamic algorithm</strong>
+          <strong>Serious VR Game for PC</strong>
         </div>
 		<div class="card-item">
           <strong>Engine: &nbsp</strong>
-          <span>Unity</span>
+          <span>Unreal</span>
         </div>
         <div class="card-item">
           <strong>Programming Languages: &nbsp</strong>
-          <span>C#, GLSL</span>
+          <span>C++, Blueprints</span>
         </div>
         <div class="card-item">
           <strong>Tools Used:</strong>
-          <span>Rider, Git</span>
+          <span>Visual Studio, Git</span>
         </div>
         <div class="card-item">
           <strong>Project Link:</strong>
-          <span><a href="https://github.com/schildka/PBDGases">GitHub</a></span>
+          <span><a href="https://github.com/schildkn/5Days/tree/tmp">GitHub</a></span>
+        </div>
+		<div class="card-item">
+          <strong>Published Paper:</strong>
+          <span><a href="https://ieeexplore.ieee.org/document/8864549">IEEE VS-Games</a></span>
         </div>
       </div>
     </div>
 		
+			
       <!-- PROJECT DETAILS -->
       <!-- 
         TODO
+
         - Change the 'subheader-text' to whatever header you want for project details
         - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
       -->
       <div id="project-details">
-        <div class="subheader-text">Project Description</div>
+        <div class="subheader-text">Game Description</div>
         <div class="project-details-content">
-          <div class="body-text">
-			With steadily increasing computing power real-time
-			simulations of particle-based fluids gain more attention. For interactive
-			applications the position-based dynamics are widely used
-			because of their controllability. We present a GPU independent
-			position-based approach for Unity, focusing on gases, with the
-			capability to calculate the densities in closed environments. We
-			show that a realistic gas simulation with reasonable performance,
-			which calculates and visualizes the amount of gases in a game,
-			can easily be integrated into Unity using this plugin. On a CPU
-			with 3.30GHz, we have constant 40 to 50 frames per second
-			using around 1k particles. A minimal simulation model can be
-			acquired with four clicks, when the plugin is integrated.
-			</br>
-			 Real-time Gases is developed as a particle-based simulation,
-			that calculates the methods of the position-based dynamics
-			on the GPU, while still providing a CPU version. To prevent
-			permanent instantiation and destroying of particles, the
-			maximum number of required gases is initialized in an object
-			pool at the beginning of the simulation. Then all simulation
-			values are sent to the GPU, where the needed calculations are
-			run. After this, the resulting values are read from the GPU
-			and applied to the simulation objects. In case of the CPU
-			version, the position-based dynamic calculations are executed
-			directly. At the end the particles positions are updated with
-			their corresponding Game Objects.
-		  </div>						
+          <div class="body-text">Educating about death is a challenging task as facing death generally poses a severe and stressful situation. We present 5Days, an immersive virtual reality game in which the player has to proceed through five different levels, which are designed on the basis of the five stages of grief described by Kubler-Ross: Denial, anger, bargaining, depression, and acceptance. Immersed in an atmospheric virtual world, the five levels instigate reflection and education about these stages. Based on early feedback from palliative care specialists, we argue that the realised concept could be a new entry point into the education and reflection of death, especially for medical students and personnel.</div>
 		</div>
       </div>
 
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">Gallery</div>
+        <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
             <!-- 
               TODO
@@ -137,41 +117,24 @@
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/PBDPoster.png" class="gallery-image">
-              <span class="image-caption">Project Poster</span>
+
+			<div class="gallery-image-container half-width">
+              <img src="../assets/images/5Days5.png" class="gallery-image">
+              <span class="image-caption">Stage.4</span>
             </div>
-<pre>
-<code class="pseudocode">1: <strong>for</strong> each particle <em>i</em> <strong>do</strong>
-2:  damp velocity v<sub>i</sub> ← v<sub>i</sub> · damping · Δt
-3:  apply external forces v<sub>i</sub> ← v<sub>i</sub> + Δt · f<sub>ext</sub>()
-4:  estimate position x<sub>i</sub><sup>*</sup> ← x<sub>i</sub> + Δt · v<sub>i</sub>
-5: <strong>end for</strong>
-6: <strong>for</strong> each particle <em>i</em> <strong>do</strong>
-7:  find neighboring particles N<sub>i</sub>(x<sub>i</sub><sup>*</sup>)
-8:  find other contacts C<sub>i</sub>(x<sub>i</sub>; x<sub>i</sub><sup>*</sup>)
-9: <strong>end for</strong>
-10: <strong>while</strong> iter &lt; solverIterations <strong>do</strong>
-11:  <strong>for</strong> each particle <em>i</em> <strong>do</strong>
-12:    solve density constraint Δp<sub>i</sub>
-13:    update position x<sub>i</sub><sup>*</sup> ← x<sub>i</sub><sup>*</sup> + Δp<sub>i</sub>
-14:  <strong>end for</strong>
-15: <strong>end while</strong>
-16: <strong>for</strong> each particle <em>i</em> <strong>do</strong>
-17:  update velocity v<sub>i</sub> ← (x<sub>i</sub><sup>*</sup> − x<sub>i</sub>) · (1 / Δt)
-18:  apply internal forces f<sub>drag</sub>, f<sub>vort</sub>
-19:  update position x<sub>i</sub> ← x<sub>i</sub><sup>*</sup>
-20: <strong>end for</strong>
-</code><span class="image-caption">PBD algorithm solver loop</span>
-</pre>
-			<div class="gallery-image-container">
-              <img src="../assets/images/PBDInit.png" class="gallery-image">
-              <span class="image-caption">Plugin Settings</span>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/5Days6.png" class="gallery-image">
+              <span class="image-caption">Stage.5</span>
+            </div>
+              <div class="gallery-image-container">
+              <img src="../assets/images/5Days1.png" class="gallery-image">
+              <span class="image-caption">Stage.1</span>
             </div>
         </div>
       </div>
     </div>
 
+		
     <!-- FOOTER -->
     <div id="footer">
       <!-- 
