--- a/project-pages/jellyMerge.html
+++ b/project-pages/jellyMerge.html
@@ -45,7 +45,7 @@
 	    
 		<div class="project-init">
       <div class="card-header">
-        <h3 class="card-title">Merge Jelly Idle Adventure</h3>
+        <div class="card-title">Merge Jelly Idle Adventure</div>
       </div>
       <div class="card-body">
  	<div class="card-item">
