added milgram asylum project

--- a/index.html
+++ b/index.html
@@ -264,6 +264,22 @@ through a range of projects.
             </a>
           </div>
 		  
+		  <div class="project-card">
+			<a href="./project-pages/Milgram.html">
+			    <div class="project-image-container">
+					<img src="./assets/images/MilgrimStart.png" class="project-image">
+				</div>
+			</a>
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Milgram Asylum</div>
+              <div class="body-text project-card-text">A VR game inspired by the Milgram experiment that challenges the player's moral decisions, developed using Unreal Engine.</div>
+			</div>
+            <a class="button" href="./project-pages/Milgram.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
+		  
         </div>
       </div>
     </div>
