added carbobprint project

--- a/index.html
+++ b/index.html
@@ -280,6 +280,22 @@ through a range of projects.
             </a>
           </div>
 		  
+		   <div class="project-card">
+			<a href="./project-pages/carbonPrint.html">
+			    <div class="project-image-container">
+					<img src="./assets/images/CO4.png" class="project-image">
+				</div>
+			</a>
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Carbonprint</div>
+              <div class="body-text project-card-text">A mini game that explores and calculates your carbon footprint made with Unity.</div>
+			</div>
+            <a class="button" href="./project-pages/carbonPrint.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
+		  
         </div>
       </div>
     </div>
