--- a/index.html
+++ b/index.html
@@ -139,6 +139,23 @@ through a range of projects.
                 - SMALL_PROJECT_DESCRIPTION: a quick project description (max 4 lines)
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
+		  
+		  <div class="project-card">
+			<a href="./project-pages/project5.html">
+				<div class="project-image-container">
+					<img src="./assets/images/RoyalRevoltTraderKeyart.jpg" class="project-image">
+				</div>
+			</a>
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Project 5</div>
+              <div class="body-text project-card-text">Action Adventure for PC and Consoles</div>
+            </div>
+            <a class="button" href="./project-pages/project5.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
+		  
           <div class="project-card">
 			<a href="./project-pages/royalRevoltTraders.html">
 				<div class="project-image-container">
