--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm Manu</span>
-              <div class="body-text">This site is currently under construction.</div>
+              <div class="body-text">a passionate game programmer with a love for both creating and playing games. I enjoy bringing ideas to life through code, crafting gameplay mechanics, and building immersive experiences.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -114,7 +114,7 @@ through a range of projects.
       <div id="my-work-section">
 	  
 	  <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text">Games - This site is currently under construction.</span>
+        <span class="subheader-text">Games</span>
 
         <div class="projects-container">
           <!-- 
@@ -208,7 +208,7 @@ through a range of projects.
 	  
 	  
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text" style="margin-top: 60px; display: inline-block;">My Projects - This site is currently under construction.</span>
+        <span class="subheader-text" style="margin-top: 60px; display: inline-block;">My Projects</span>
 
         <div class="projects-container">
           <!-- 
