--- a/project-pages/5Days.html
+++ b/project-pages/5Days.html
@@ -52,15 +52,15 @@
           <strong>Serious VR Game for PC</strong>
         </div>
 		<div class="card-item">
-          <strong>Engine: &nbsp</strong>
+          <strong>Engine:</strong>
           <span>Unreal</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C++, Blueprints</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Visual Studio, Git</span>
         </div>
         <div class="card-item">
@@ -68,7 +68,7 @@
           <span><a href="https://github.com/schildkn/5Days/tree/tmp">GitHub</a></span>
         </div>
 		<div class="card-item">
-          <strong>Published Paper:</strong>
+          <strong>Published Paper:&nbsp</strong>
           <span><a href="https://ieeexplore.ieee.org/document/8864549">IEEE VS-Games</a></span>
         </div>
       </div>
