--- a/project-pages/carbonPrint.html
+++ b/project-pages/carbonPrint.html
@@ -49,18 +49,18 @@
       </div>
       <div class="card-body">
  	<div class="card-item">
-          <strong>Game for PC</strong>
+          <strong>CO<sub>2</sub> footprint simulation game for PC</strong>
         </div>
 		<div class="card-item">
           <strong>Engine: &nbsp</strong>
           <span>Unity</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C#</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Rider, Git</span>
         </div>
         <div class="card-item">
