--- a/project-pages/managine.html
+++ b/project-pages/managine.html
@@ -60,11 +60,11 @@
           <strong>Custome 3D Engine using OpenGL.</strong>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C++, OpenGL/GLSL</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Visual Studio, Git, CMake</span>
         </div>
         <div class="card-item">
