--- a/project-pages/pbdGases.html
+++ b/project-pages/pbdGases.html
@@ -49,18 +49,18 @@
       </div>
       <div class="card-body">
  	<div class="card-item">
-          <strong>Gas simulation plugin for Unity based on the position-based dynamic algorithm</strong>
+          <strong>Gas simulation plugin for Unity based on the </br> position-based dynamic algorithm</strong>
         </div>
 		<div class="card-item">
           <strong>Engine: &nbsp</strong>
           <span>Unity</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C#, GLSL</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Rider, Git</span>
         </div>
         <div class="card-item">
