--- a/project-pages/project5.html
+++ b/project-pages/project5.html
@@ -56,16 +56,16 @@
           <span>In-House (Keen Library)</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages:</strong>
+          <strong>Languages:</strong>
           <span>C++, Javascript, Ruby</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used: &nbsp</strong>
+          <strong>Tools: &nbsp</strong>
           <span>Visual Studio, Plastic, Trello, Confluence</span>
         </div>
         <div class="card-item">
           <strong>Status:</strong>
-          <span>Unanounced</span>
+          <span>Unannounced</span>
         </div>
       </div>
     </div>
@@ -91,65 +91,43 @@
 		</div>
       </div>
 
-      <!-- IMAGE GALLERY -->
+	
+		<!-- 
       <div id="project-gallery">
-        <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
         <div class="subheader-text">Gallery</div>
+		 <div class="body-text">All images and videos have been approved by THQ Nordic for use in this portfolio.</div>
         <div class="project-gallery-content">
-            <!-- 
-              TODO
 
-              This is where the images in the gallery live. Here's a simple gallery image for you to copy:
-
-              Full Width Image:
-
-                <div class="gallery-image-container">
-                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-                  <span class="image-caption">IMAGE_CAPTION</span>
-                </div>
-
-              Half Width Image: 
-
-                <div class="gallery-image-container half-width">
-                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-                  <span class="image-caption">IMAGE_CAPTION</span>
-                </div>
-
-              - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
-                  - IMAGE_NAME: the name of the image file in assets/images
-                  - IMAGE_CAPTION: to the caption of the image
-            -->
-			
-			<!-- 
+			 
             <div class="gallery-image-container half-width">
               <img src="../assets/gifs/HoldAttack.gif" class="gallery-image">
-              <span class="image-caption"></span>
+              <span class="image-caption">Projectiles: The enemy projectile follows an arced trajectory, simulating a ballistic path. The player projectile travels along static geometry and applies force to enemies upon impact.</span>
             </div>
 			<div class="gallery-image-container half-width">
               <img src="../assets/gifs/whipAttack.gif" class="gallery-image">
-              <span class="image-caption"></span>
+              <span class="image-caption">Whip Attack: The player targets an enemy and launches the whip, either pulling the enemy in or slinging themselves toward the target. This is followed by a powerful combo attack.</span>
             </div>
 			<div class="gallery-image-container">
               <img src="../assets/gifs/whipSling.gif" class="gallery-image">
-              <span class="image-caption"></span>
+              <span class="image-caption">Traversal mechanic: The player uses the whip to traverse the environment via horizontal and vertical hooks. Movement is physics-based, preserving momentum for fluid navigation.</span>
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/WhipSling.png" class="gallery-image">
               <span class="image-caption"></span>
-            </div>  
+			</div>  
             <div class="gallery-image-container">
               <img src="../assets/gifs/PerfectEvade.gif" class="gallery-image">
-              <span class="image-caption"></span>
+              <span class="image-caption">The player can perform powerful counterattacks by executing a perfectly timed dodge. Camera shake can be defined per individual effect, with control over both positional and rotational axes. In this case, a vertical shake is created by subtly oscillating the camera’s Y-axis position using a simple sine wave.</span>
             </div>
 			<div class="gallery-image-container half-width">
               <img src="../assets/images/SplineAiming.png" class="gallery-image">
-              <span class="image-caption"></span>
+              <span class="image-caption">Ability: Driven by a B-spline, the player aims and sets a target, then adjusts the curve to shape the desired flight path. Movement follows the resulting trajectory.</span>
 			</div>
 			<div class="gallery-image-container half-width">
               <img src="../assets/images/MovingPlatforms.png" class="gallery-image">
-              <span class="image-caption"></span>
+              <span class="image-caption">Moving Platforms: Designed platforms that move between points using various modes. Implemented logic to move attached objects, including player and enemy characters, updating their position and rotation based on the platform's movement. </span>
             </div>
-			-->
+			 -->
       </div>
     </div>
 
