--- a/project-pages/royalRevoltTraders.html
+++ b/project-pages/royalRevoltTraders.html
@@ -56,12 +56,12 @@
           <span>Unity</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C#, Ruby, HLSL</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
-          <span>Rider, Git, Svn, Codecks</span>
+          <strong>Tools:</strong>
+          <span>Rider, Git, Svn, Codecks, Miro</span>
         </div>
         <div class="card-item">
           <strong>Project Link:</strong>
