--- a/project-pages/Milgram.html
+++ b/project-pages/Milgram.html
@@ -56,11 +56,11 @@
           <span>Unreal</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C++, Blueprints</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Visual Studio, Git</span>
         </div>
         <div class="card-item">
