--- a/project-pages/jellyMerge.html
+++ b/project-pages/jellyMerge.html
@@ -56,11 +56,11 @@
           <span>Unity</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C#, Ruby, HLSL</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Rider, Git, Svn, Codecks</span>
         </div>
         <div class="card-item">
