--- a/project-pages/royalForestBattle.html
+++ b/project-pages/royalForestBattle.html
@@ -56,11 +56,11 @@
           <span>Unity</span>
         </div>
         <div class="card-item">
-          <strong>Programming Languages: &nbsp</strong>
+          <strong>Languages: &nbsp</strong>
           <span>C#, Ruby</span>
         </div>
         <div class="card-item">
-          <strong>Tools Used:</strong>
+          <strong>Tools:</strong>
           <span>Rider, Git, Svn</span>
         </div>
         <div class="card-item">
