--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ and actively support project management efforts. By applying advanced 3D mathema
 tackle intricate gameplay challenges while mentoring junior programmers and interns in planning and
 writing structured code. Through regular performance analysis and optimization, I help deliver a
 smooth and engaging player experience. This multifaceted role has allowed me to grow both
-professionally and creatively
+professionally and creatively.
 </div>
 		 <div class="body-text">
 I completed my B.Sc. in Computer Science at the Frankfurt University of Applied Sciences in 2017,
