activated project 5 page

--- a/project-pages/project5.html
+++ b/project-pages/project5.html
@@ -91,33 +91,41 @@
 		</div>
       </div>
 
-	
-		<!-- 
       <div id="project-gallery">
         <div class="subheader-text">Gallery</div>
 		 <div class="body-text">All images and videos have been approved by THQ Nordic for use in this portfolio.</div>
         <div class="project-gallery-content">
-
-			 
             <div class="gallery-image-container half-width">
-              <img src="../assets/gifs/HoldAttack.gif" class="gallery-image">
+			 <video class="gallery-image" autoplay loop muted playsinline>
+				<source src="../assets/gifs/holdAttackV.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			  </video>
               <span class="image-caption">Projectiles: The enemy projectile follows an arced trajectory, simulating a ballistic path. The player projectile travels along static geometry and applies force to enemies upon impact.</span>
             </div>
-			<div class="gallery-image-container half-width">
-              <img src="../assets/gifs/whipAttack.gif" class="gallery-image">
-              <span class="image-caption">Whip Attack: The player targets an enemy and launches the whip, either pulling the enemy in or slinging themselves toward the target. This is followed by a powerful combo attack.</span>
+			 <div class="gallery-image-container half-width">
+				<video class="gallery-image" autoplay loop muted playsinline>
+				<source src="../assets/gifs/perfectEvadeV.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			  </video>
+              <span class="image-caption">The player can perform powerful counterattacks by executing a perfectly timed dodge. Camera shake can be defined per individual effect, with control over both positional and rotational axes. In this case, a vertical shake is created by subtly oscillating the camera’s Y-axis position using a simple sine wave.</span>
             </div>
 			<div class="gallery-image-container">
-              <img src="../assets/gifs/whipSling.gif" class="gallery-image">
-              <span class="image-caption">Traversal mechanic: The player uses the whip to traverse the environment via horizontal and vertical hooks. Movement is physics-based, preserving momentum for fluid navigation.</span>
-            </div>
+			  <video class="gallery-image" autoplay loop muted playsinline>
+				<source src="../assets/gifs/whipSlingV.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			  </video>
+			  <span class="image-caption">Traversal mechanic: The player uses the whip to traverse the environment via horizontal and vertical hooks. Movement is physics-based, preserving momentum for fluid navigation.</span>
+			</div>
             <div class="gallery-image-container">
               <img src="../assets/images/WhipSling.png" class="gallery-image">
               <span class="image-caption"></span>
 			</div>  
-            <div class="gallery-image-container">
-              <img src="../assets/gifs/PerfectEvade.gif" class="gallery-image">
-              <span class="image-caption">The player can perform powerful counterattacks by executing a perfectly timed dodge. Camera shake can be defined per individual effect, with control over both positional and rotational axes. In this case, a vertical shake is created by subtly oscillating the camera’s Y-axis position using a simple sine wave.</span>
+			<div class="gallery-image-container">
+			  <video class="gallery-image" autoplay loop muted playsinline>
+				<source src="../assets/gifs/whipAttackV.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			  </video>
+              <span class="image-caption">Whip Attack: The player targets an enemy and launches the whip, either pulling the enemy in or slinging themselves toward the target. This is followed by a powerful combo attack.</span>
             </div>
 			<div class="gallery-image-container half-width">
               <img src="../assets/images/SplineAiming.png" class="gallery-image">
@@ -127,7 +135,6 @@
               <img src="../assets/images/MovingPlatforms.png" class="gallery-image">
               <span class="image-caption">Moving Platforms: Designed platforms that move between points using various modes. Implemented logic to move attached objects, including player and enemy characters, updating their position and rotation based on the platform's movement. </span>
             </div>
-			 -->
       </div>
     </div>
 
