added plastic scm to tools

--- a/project-pages/project5.html
+++ b/project-pages/project5.html
@@ -61,7 +61,7 @@
         </div>
         <div class="card-item">
           <strong>Tools: &nbsp</strong>
-          <span>Visual Studio, Plastic, Trello, Confluence</span>
+          <span>Visual Studio, Plastic SCM, Trello, Confluence</span>
         </div>
         <div class="card-item">
           <strong>Status:</strong>
